--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="images/icon.png">
     <title>PROFI-LHÁZ KFT. - Kezdőlap</title>
 </head>
 
 <body>
     <!--Intro-->
-    <div class="intro"><span class="content"><img class="logo" id="logo" src="logo.jpeg" alt="Logo"></span></div>
+    <div class="intro"><span class="content"><img class="logo" id="logo" src="images/logo.jpeg" alt="Logo"></span></div>
     <!--SideMenu-->
     <div class="sideMenu">
         <nav>
@@ -24,7 +24,9 @@
     <div class="sideMenuBackground"></div>
     <!--Header-->
     <header>
-        <span onclick="window.location='index.html'" class="logo"><img src="logoPNG.png" alt="Logo"><p class="navLink">PROFI-LHÁZ</p></span>
+        <span onclick="window.location='index.html'" class="logo"><img src="images/logoPNG.png" alt="Logo">
+            <p class="navLink">PROFI-LHÁZ</p>
+        </span>
         <a class="navLink" id="moreBtn">&#9776;</a>
         <nav>
             <a href="index.html" class="navLink">Kezdőlap</a>
@@ -36,36 +38,67 @@
     <span onclick="window.location='#'" class="toTopBtn">&#129129; Az oldal tetejére</span>
 
     <main>
-        <div class="hoverE card">
-            <section id="HE" class="card-content">
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverE card">
-            <section id="HE" class="card-content">
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverE card">
-            <section id="HE" class="card-content">
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverE card">
-            <section id="HE" class="card-content">
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
+        <section>
+            <h2>A cégről</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident dignissimos saepe qui
+                consequatur officia illum quod, ex nisi cupiditate suscipit vitae. Ad omnis error, ratione est
+                ducimus
+                officia repellendus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam officiis fugiat rem id quasi rerum
+                laboriosam dolorum ipsum possimus magni iste fugit earum tempora facilis voluptas, cupiditate dolore
+                vitae sunt libero natus? Consectetur modi exercitationem ducimus facere recusandae necessitatibus
+                facilis? Corrupti ipsa quam perspiciatis, deserunt sed impedit, beatae quae asperiores similique
+                labore nobis atque quia blanditiis sint reiciendis repellendus consequuntur. Aut ab explicabo facere
+                unde illo vel rerum magni eligendi inventore ullam impedit temporibus, id ipsa nostrum esse numquam
+                minus neque, incidunt, vitae recusandae accusamus voluptate. Quia repellendus accusamus quasi quam
+                aliquam fugiat minus voluptatum eaque commodi. Sunt, eius dicta.</p>
+            <h2>Csapatunk</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore sit doloremque porro, maxime
+                minima
+                voluptatibus commodi culpa obcaecati debitis adipisci non error natus deleniti. Magni eos quibusdam
+                placeat praesentium amet.</p>
+            <div class="row">
+                <div class="card">
+                    <div class="card-content2">
+                        <img src="images/icon.png" class="profile-img hoverE" id="hoverB" alt="">
+                        <h2>Név Név</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
+                            sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod ipsam
+                            tenetur nostrum dolore.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
+                            iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
+                            praesentium ullam dolorum minima possimus quas!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content2">
+                        <img src="images/icon.png" class="profile-img hoverE" id="hoverB" alt="">
+                        <h2>Név Név</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
+                            sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod ipsam
+                            tenetur nostrum dolore.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
+                            iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
+                            praesentium ullam dolorum minima possimus quas!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content2">
+                        <img src="images/icon.png" class="profile-img hoverE" id="hoverB" alt="">
+                        <h2>Név Név</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
+                            sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod ipsam
+                            tenetur nostrum dolore.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
+                            iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
+                            praesentium ullam dolorum minima possimus quas!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="app.js"></script>
 </body>
+
 </html>
