--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="images/icon.png">
     <title>PROFI-LHÁZ KFT. - Kezdőlap</title>
 </head>
 
 <body>
     <!--Intro-->
-    <div class="intro"><span class="content"><img class="logo" id="logo" src="logo.jpeg" alt="Logo"></span></div>
+    <div class="intro"><span class="content"><img class="logo" id="logo" src="images/logo.jpeg" alt="Logo"></span></div>
     <!--SideMenu-->
     <div class="sideMenu">
         <nav>
@@ -24,7 +24,7 @@
     <div class="sideMenuBackground"></div>
     <!--Header-->
     <header>
-        <span onclick="window.location='index.html'" class="logo"><img src="logoPNG.png" alt="Logo">
+        <span onclick="window.location='index.html'" class="logo"><img src="images/logoPNG.png" alt="Logo">
             <p class="navLink">PROFI-LHÁZ</p>
         </span>
         <a class="navLink" id="moreBtn">&#9776;</a>
@@ -57,9 +57,10 @@
                 quae pariatur unde?
             </p>
         </section>
-        <div class="card popup" id="general">
-            <section class="card-content hoverE">
-                <h2>Generál kivitelezés</h2>
+        <div id="hehe" style="position: absolute; width: 1rem; height: 1rem; z-index: 30;"></div>
+        <div class="card">
+            <section class="card-content hoverE popup" id="general">
+                <h3>Generál kivitelezés</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic tenetur ea vero, labore, culpa itaque,
                     beatae iusto quibusdam fuga quod cupiditate molestiae at. Numquam, ipsam? Vitae, eaque soluta. Iure,
                     repudiandae.</p>
@@ -67,9 +68,9 @@
                 <p class="hint">Kattintás további infókért</p>
             </section>
         </div>
-        <div class="card popup" id="szerkezet">
-            <section class="card-content hoverE">
-                <h2>Szerkezetkész kivitelezés</h2>
+        <div class="card">
+            <section class="card-content hoverE popup" id="szerkezet">
+                <h3>Szerkezetkész kivitelezés</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam minima commodi quas repellat in, quos
                     quod? Beatae necessitatibus saepe quam itaque incidunt ipsam eaque, ad alias, quaerat rem nisi
                     aspernatur!</p>
@@ -78,20 +79,7 @@
             </section>
         </div>
     </main>
-
-    <!--popup-->
-    <div tabindex="-1" id="popup-window">
-        <span id="popup-header">
-            <span id="close-button"><span>&times;</span></span>
-            <h1 id="popup-title"></h1>
-        </span>
-        <p id="popup-text"></p>
-        <img id="popup-img" class="sample viewable" src="" alt="">
-        <span id="popup-content"></span>
-    </div>
-    <div id="popup-bgfade"></div>
-
-
+    
     <script src="app.js"></script>
 </body>
 
