--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
     <span onclick="window.location='#'" class="toTopBtn">&#129129; Az oldal tetejére</span>
 
     <main>
+        <h2>A cégről</h2>
         <section>
-            <h2>A cégről</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident dignissimos saepe qui
                 consequatur officia illum quod, ex nisi cupiditate suscipit vitae. Ad omnis error, ratione est
                 ducimus
@@ -52,50 +52,62 @@
                 unde illo vel rerum magni eligendi inventore ullam impedit temporibus, id ipsa nostrum esse numquam
                 minus neque, incidunt, vitae recusandae accusamus voluptate. Quia repellendus accusamus quasi quam
                 aliquam fugiat minus voluptatum eaque commodi. Sunt, eius dicta.</p>
-            <h2>Csapatunk</h2>
+
+        </section>
+        <h2>Csapatunk</h2>
+        <section>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore sit doloremque porro, maxime
                 minima
                 voluptatibus commodi culpa obcaecati debitis adipisci non error natus deleniti. Magni eos quibusdam
                 placeat praesentium amet.</p>
-            <div class="row">
+            <div class="evently">
                 <div class="card">
-                    <div class="card-content2">
-                        <img src="images/icon.png" class="profile-img hoverE" id="hoverB" alt="">
-                        <h2>Név Név</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
-                            sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod ipsam
-                            tenetur nostrum dolore.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
-                            iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
-                            praesentium ullam dolorum minima possimus quas!</p>
-                    </div>
+                    <img src="images/icon.png" class="profile-img hoverE hoverB" alt="">
+                    <h2>Név Név</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
+                        sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod
+                        ipsam
+                        tenetur nostrum dolore.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
+                        iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
+                        praesentium ullam dolorum minima possimus quas!</p>
                 </div>
                 <div class="card">
-                    <div class="card-content2">
-                        <img src="images/icon.png" class="profile-img hoverE" id="hoverB" alt="">
-                        <h2>Név Név</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
-                            sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod ipsam
-                            tenetur nostrum dolore.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
-                            iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
-                            praesentium ullam dolorum minima possimus quas!</p>
-                    </div>
+                    <img src="images/icon.png" class="profile-img hoverE hoverB" alt="">
+                    <h2>Név Név</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
+                        sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod
+                        ipsam
+                        tenetur nostrum dolore.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
+                        iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
+                        praesentium ullam dolorum minima possimus quas!</p>
                 </div>
                 <div class="card">
-                    <div class="card-content2">
-                        <img src="images/icon.png" class="profile-img hoverE" id="hoverB" alt="">
-                        <h2>Név Név</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
-                            sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod ipsam
-                            tenetur nostrum dolore.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
-                            iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
-                            praesentium ullam dolorum minima possimus quas!</p>
-                    </div>
+                    <img src="images/icon.png" class="profile-img hoverE hoverB" alt="">
+                    <h2>Név Név</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti nostrum quasi labore
+                        sint. Excepturi delectus a dolor, aliquid perspiciatis omnis amet aut adipisci vero, quod
+                        ipsam
+                        tenetur nostrum dolore.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam delectus est id temporibus
+                        iusto soluta magnam numquam autem ad, officiis dolorem inventore exercitationem libero
+                        praesentium ullam dolorum minima possimus quas!</p>
                 </div>
             </div>
         </section>
+        <h2>Képek</h2>
+        <section class="evently gallery">
+            <img class="hoverE" src="images/background.jpg" alt="">
+            <img class="hoverE" src="images/background.jpg" alt="">
+            <img class="hoverE" src="images/background.jpg" alt="">
+            <img class="hoverE" src="images/background.jpg" alt="">
+            <img class="hoverE" src="images/background.jpg" alt="">
+            <img class="hoverE" src="images/background.jpg" alt="">
+            <img class="hoverE" src="images/background.jpg" alt="">
+            <img class="hoverE" src="images/background.jpg" alt="">
+        </section>
+
     </main>
     <div class="outdated">Ez a böngésző nem támogatott! :(</div>
 
