--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="images/icon.png">
     <title>PROFI-LHÁZ KFT. - Kezdőlap</title>
 </head>
+
 <body>
     <!--Intro-->
     <div class="intro"><span class="content"><img class="logo" id="logo" src="images/logo.jpeg" alt="Logo"></span></div>
@@ -57,30 +58,27 @@
             </p>
         </section>
         <div class="evently">
-            <div class="card">
-                <section class="card-content hoverE popup" id="general">
-                    <h3>Generál kivitelezés</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic tenetur ea vero, labore, culpa itaque,
-                        beatae iusto quibusdam fuga quod cupiditate molestiae at. Numquam, ipsam? Vitae, eaque soluta. Iure,
-                        repudiandae.</p>
-                    <img src="images/general-sample.jpg" class="sample">
-                    <p class="hint">Kattintás további infókért</p>
-                </section>
-            </div>
-            <div class="card">
-                <section class="card-content hoverE popup" id="szerkezet">
-                    <h3>Szerkezetkész kivitelezés</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam minima commodi quas repellat in, quos
-                        quod? Beatae necessitatibus saepe quam itaque incidunt ipsam eaque, ad alias, quaerat rem nisi
-                        aspernatur!</p>
-                    <img src="images/szerkkesz-sample.jpg" class="sample">
-                    <p class="hint">Kattintás további infókért</p>
-                </section>
-            </div>
+            <section class="card hoverE popup" id="general">
+                <h3>Generál kivitelezés</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic tenetur ea vero, labore, culpa itaque,
+                    beatae iusto quibusdam fuga quod cupiditate molestiae at. Numquam, ipsam? Vitae, eaque soluta. Iure,
+                    repudiandae.</p>
+                <img src="images/general-sample.jpg" class="sample">
+                <p class="hint">Kattintás további infókért</p>
+            </section>
+            <section class="card hoverE popup" id="szerkezet">
+                <h3>Szerkezetkész kivitelezés</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam minima commodi quas repellat in, quos
+                    quod? Beatae necessitatibus saepe quam itaque incidunt ipsam eaque, ad alias, quaerat rem nisi
+                    aspernatur!</p>
+                <img src="images/szerkkesz-sample.jpg" class="sample">
+                <p class="hint">Kattintás további infókért</p>
+            </section>
         </div>
     </main>
     <div class="outdated">Ez a böngésző nem támogatott! :(</div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
