--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/icon.png">
-    <title>PROFI-LHÁZ KFT. - Kezdőlap</title>
+    <title>PROFI-LHÁZ KFT. - Rólunk</title>
 </head>
 
 <body>
@@ -35,7 +35,6 @@
             <div class="cursor"></div>
         </nav>
     </header>
-    <span onclick="window.location='#'" class="toTopBtn">&#129129; Az oldal tetejére</span>
 
     <main>
         <h2>A cégről</h2>
@@ -97,7 +96,7 @@
             </div>
         </section>
         <h2>Képek</h2>
-        <section class="evently gallery">
+        <section class="gallery evently-left">
                 <img class="hoverE" id="0" src="images/background.jpg" alt="">
                 <img class="hoverE" id="1" src="images/general-sample.jpg" alt="">
                 <img class="hoverE" id="2" src="images/szerkkesz-sample.jpg" alt="">
