--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/icon.png">
-    <title>PROFI-LHÁZ KFT. - Kezdőlap</title>
+    <title>PROFI-LHÁZ KFT. - Kapcsolat</title>
 </head>
 
 <body>
