--- a/about.html
+++ b/about.html
@@ -96,14 +96,14 @@
             </div>
         </section>
         <h2>Képek</h2>
-        <section class="gallery evently-left">
-                <img class="hoverE" id="0" src="images/background.jpg" alt="">
-                <img class="hoverE" id="1" src="images/general-sample.jpg" alt="">
-                <img class="hoverE" id="2" src="images/szerkkesz-sample.jpg" alt="">
-                <img class="hoverE" id="3" src="images/background.jpg" alt="">
-                <img class="hoverE" id="4" src="images/general-sample.jpg" alt="">
-                <img class="hoverE" id="5" src="images/szerkkesz-sample.jpg" alt="">
-        </section>
+        <div class="gallery">
+            <img class="hoverE" id="0" src="images/background.jpg" alt="">
+            <img class="hoverE" id="1" src="images/general-sample.jpg" alt="">
+            <img class="hoverE" id="2" src="images/szerkkesz-sample.jpg" alt="">
+            <img class="hoverE" id="3" src="images/background.jpg" alt="">
+            <img class="hoverE" id="4" src="images/general-sample.jpg" alt="">
+            <img class="hoverE" id="5" src="images/szerkkesz-sample.jpg" alt="">
+        </div>
 
     </main>
     <div class="outdated">Ez a böngésző nem támogatott! :(</div>
